styles.css
/********** Base styles **********/
* {
  box-sizing: border-box;
}
body {
 font-family: Verdana, Arial, Helvetica, sans-serif;
}

h1 {
  margin-bottom: 15px;
  text-align: center;
}

p {
  border: 2px solid black;
  background-color: #b1f2ff;
  width: 100%;
  /*height: 160px;*/
  font-family: Helvetica;
  color: #000000;
  padding-left: 5px;
  padding-top: 40px;
}

#b1, #b2, #b3 {
  position: relative;
}

#t1, #t2, #t3 {
  position: absolute;
  top: 0px;
  right: 1px;
  padding: 10px;
}

div > div > div > p {
  width: 100px;
  height: 35px;
  color: black;
  padding: 6px;
  text-align: center;
  font-weight: bold;
}

#p1 {
  background-color: #fcc9b9;
}

#p2 {
  background-color: #c0ff02;
}

#p3 {
  background-color: #c8a2c8;
}

/* Simple Responsive Framework. */
.row {
  width: 100%;
}
.card {
  padding: 10px;
}
/********** Large devices only **********/
@media (min-width: 992px) {
  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
    float: left;
  }
  .col-lg-1 {
    width: 8.33%;
  }
  .col-lg-2 {
    width: 16.66%;
  }
  .col-lg-3 {
    width: 25%;
  }
  .col-lg-4 {
    width: 33.33%;
  }
  .col-lg-5 {
    width: 41.66%;
  }
  .col-lg-6 {
    width: 50%;
  }
  .col-lg-7 {
    width: 58.33%;
  }
  .col-lg-8 {
    width: 66.66%;
  }
  .col-lg-9 {
    width: 74.99%;
  }
  .col-lg-10 {
    width: 83.33%;
  }
  .col-lg-11 {
    width: 91.66%;
  }
  .col-lg-12 {
    width: 100%;
  }
}

/********** Medium devices only **********/
@media (min-width: 768px) and (max-width: 991px) {
  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
    float: left;
  }
  .col-md-1 {
    width: 8.33%;
  }
  .col-md-2 {
    width: 16.66%;
  }
  .col-md-3 {
    width: 25%;
  }
  .col-md-4 {
    width: 33.33%;
  }
  .col-md-5 {
    width: 41.66%;
  }
  .col-md-6 {
    width: 50%;
  }
  .col-md-7 {
    width: 58.33%;
  }
  .col-md-8 {
    width: 66.66%;
  }
  .col-md-9 {
    width: 74.99%;
  }
  .col-md-10 {
    width: 83.33%;
  }
  .col-md-11 {
    width: 91.66%;
  }
  .col-md-12 {
    width: 100%;
  }
}

